syntax = "proto3";
import "google/protobuf/empty.proto";
option  go_package = "./;proto";

service Inventory{
  rpc SetInv(InvInfo) returns (google.protobuf.Empty); // 设置库存数量
  rpc InvDetail(InvInfo) returns (InvInfo);// 获取库存信息
  rpc Sell(SellInfo) returns (google.protobuf.Empty);  // 购物车下单
  rpc ReBack(SellInfo) returns (google.protobuf.Empty);  // 库存归还
}


message InvInfo{
  int32 goodsId = 1;
  int32 num = 2;
  int32 version=3;
}
message SellInfo{
  repeated InvInfo goodsInfo = 1;
}